Archive2/78/f07bccf316d7c2/output
main.cpp:4:20: error: expected expression
    decltype((auto)) y = x;
                   ^
1 error generated.
